# Loop-Watchdog

./: .gitignore  LICENSE  README.md  pyproject.toml
.loop_watchdog/: state.json
apps/control-plane/: .dev.vars.example  package-lock.json  package.json  tsconfig.json  wrangler.jsonc
apps/control-plane/migrations/: 0001_schema.sql
apps/control-plane/src/: index.js  index.ts
docs/: ARCHITECTURE.md
scripts/: test-loop-watchdog.ps1
src/loop_watchdog/: __init__.py  alerting.py  api.py  cli.py  config.py  launcher.py  loop_detector.py  models.py  provider.py  state.py
src/loop_watchdog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/loop_watchdog/static/: dashboard.css  dashboard.js  landing.css  landing.js
src/loop_watchdog/templates/: dashboard.html  landing.html
tests/: test_api.py  test_detector.py  test_launcher.py
